Add compiler module export options, enhance diagnostic logging, and introduce support for IntelliJ compiler.xml configuration